# FlappyBirDiT

./: .gitignore  LICENSE  main.py  pyproject.toml
flappy-bird/: agent.py  controller.py  environ.py  flappy.py  flappyenviron.py  game_runner.py  h5_to_video.py  play_game.py  record.py  trainer.py  trainer2.py
