[project]
name = "brick-breaker-dit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.2.1",
    "h5==0.11.0",
    "h5py==3.14.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "mss==10.0.0",
    "numpy==2.3.1",
    "pygame==2.6.1",
    "pygments==2.19.2",
    "rich==14.0.0",
    "ry==0.0.49",
    "typing-extensions==4.14.1",
]
