[project]
name = "flappy-bird-dit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.2.1",
    "gymnasium>=1.0.0",
    "h5==0.11.0",
    "h5py==3.14.0",
    "keyboard>=0.13.5",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "mss==10.0.0",
    "numpy==2.3.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pygame==2.6.1",
    "pygments==2.19.2",
    "pynput>=1.8.1",
    "rich==14.0.0",
    "ry==0.0.49",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "typing-extensions==4.14.1",
    "wandb>=0.21.0",
]
[tool.uv]
environments = ["sys_platform == 'linux'"]
